--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,6 +328,12 @@ Apunta a lo que esta predefinido
 <!-- Ejemplo de uso de servicio -->
 <!-- <app-lista-contactos></app-lista-contactos> -->
 <!-- Ejemplo de peticion http -->
-<app-login-form></app-login-form>
+<!-- <app-login-form></app-login-form> -->
+
+<!-- Ejemplo de formularios reactivos -->
+<!-- <app-formulario></app-formulario> -->
+<!-- <app-formulario-anidado></app-formulario-anidado> -->
+<!-- <app-formulario-array></app-formulario-array> -->
+<app-formulario-validado></app-formulario-validado>
 </div>
 
